<?xml version="1.0"?>
<package format="2">
  <name>object_visualizer</name>
  <version>0.0.1</version>
  <description>The object_visualizer package</description>

  <maintainer email="maximilian@von-unwerth.de">Maximilian von Unwerth</maintainer>

  <license>BSD</license>

  <author email="maximilian@von-unwerth.de">Maximilian von Unwerth</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package>
